--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
   </head>
   <body>
     <!--Шапка страницы-->
-    <header>
+    <header class="header">
+      <div class="container">
       <nav class="navigations">
         <a class="logo-header" href="./index.html"
           >Web<span class="logo-span">Studio</span></a
@@ -52,7 +53,9 @@
             <a class="mail" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
-      </address>
+      </address> 
+      </div>
+      <!-- /div container -->
     </header>
     <main>
       <!-- PROMO -->
