--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <a class="logo-header" href="./index.html"
           >Web<span class="logo-span">Studio</span></a
         >
-        <ul>
-          <li>
+        <ul class="menu-ul">
+          <li class="menu-li">
             <a class="active" href="./index.html">Studio</a>
           </li>
           <li>
@@ -41,15 +41,15 @@
         </ul>
       </nav>
 
-      <!-- Contacts -->
+      <!-- Address -->
       <address class="contacts">
-        <ul>
-          <li>
+        <ul class="contact-ul">
+          <li class="contact-li">
             <a class="mail" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="contact-li">
             <a class="mail" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
