--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
           <li class="menu-li">
             <a class="active" href="./index.html">Studio</a>
           </li>
-          <li>
+          <li class="menu-li">
             <a class="active" href="">Portfolio</a>
           </li>
-          <li>
+          <li class="menu-li">
             <a class="active" href="">Contacts</a>
           </li>
         </ul>
