--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@
         </ul>
       </address> 
       </div>
-      <!-- /div container -->
+      <!-- /div Header-->
     </header>
     <main>
-      <!-- PROMO -->
+      <!-- PROMO Section 1 -->
       <section class="section-promo">
+        <div class="container"> 
         <h1 class="promo-title">Effective Solutions for Your Business</h1>
         <button class="btn" type="button">Order Service</button>
       </section>
@@ -97,6 +98,8 @@
             </p>
           </li>
         </ul>
+        </div>
+        <!-- /div Section 1 -->
       </section>
 
       <!-- OUR TEAM -->
