--- a/index.html
+++ b/index.html
@@ -67,33 +67,33 @@
         <!-- /div Section 1 -->
       </section>
 
-      <!-- PECULIARITTES Section 2-->
-      <section class="section-peculiartties">
+      <!-- PECULIARITIES Section 2-->
+      <section class="section-peculiarities">
         <div class="container">
           <h2 class="visually-hidden" aria-hidden="true">WebStudio</h2>
-          <ul class="peculiartties-ul">
-            <li class="peculiartties-li">
+          <ul class="peculiarities-ul">
+            <li class="peculiarities-li">
               <h3 class="item-title">Strategy</h3>
               <p class="item-description">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li class="peculiartties-li">
+            <li class="peculiarities-li">
               <h3 class="item-title">Punctuality</h3>
               <p class="item-description">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li class="peculiartties-li">
+            <li class="peculiarities-li">
               <h3 class="item-title">Diligence</h3>
               <p class="item-description">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="peculiartties-li">
+            <li class="peculiarities-li">
               <h3 class="item-title">Technologies</h3>
               <p class="item-description">
                 Design practice focused on digital experiences. We bring forth a
