--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <!-- /div Section 1 -->
       </section>
 
-      <!-- PECULIARITIES Section 2-->
+      <!-- PECULIARITIES Section 2 -->
       <section class="section-peculiarities">
         <div class="container">
           <h2 class="visually-hidden" aria-hidden="true">WebStudio</h2>
@@ -105,43 +105,54 @@
         <!-- /div Section-2 -->
       </section>
 
-      <!-- OUR TEAM -->
+      <!-- OUR TEAM Section 3 -->
       <section class="section-team">
-        <h2 class="section-title">Our Team</h2>
-        <ul class="team-items">
-          <li class="team-item">
-            <img
-              src="./images/Mark-Guerrero.jpg"
-              alt="Mark Guerrero"
-              width="264" />
-            <h3 class="item-title">Mark Guerrero</h3>
-            <p class="item-description">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img src="./images/Tom-Ford.jpg" alt="Tom Ford" width="264" />
-            <h3 class="item-title">Tom Ford</h3>
-            <p class="item-description">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/Camila-Garcia.jpg"
-              alt="Camila Garcia"
-              width="264" />
-            <h3 class="item-title">Camila Garcia</h3>
-            <p class="item-description">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/Daniel-Wilson.jpg"
-              alt="Daniel Wilson"
-              width="264" />
-            <h3 class="item-title">Daniel Wilson</h3>
-            <p class="item-description">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Our Team</h2>
+          <ul class="team-ul">
+            <li class="team-li">
+              <img
+                src="./images/Mark-Guerrero.jpg"
+                alt="Mark Guerrero"
+                width="264" />
+              <div class="profile">
+                <h3 class="item-title">Mark Guerrero</h3>
+                <p class="item-description">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-li">
+              <img src="./images/Tom-Ford.jpg" alt="Tom Ford" width="264" />
+              <div class="profile">
+                <h3 class="item-title">Tom Ford</h3>
+                <p class="item-description">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-li">
+              <img
+                src="./images/Camila-Garcia.jpg"
+                alt="Camila Garcia"
+                width="264" />
+              <div class="profile">
+                <h3 class="item-title">Camila Garcia</h3>
+                <p class="item-description">Marketing</p>
+              </div>
+            </li>
+            <li class="team-li">
+              <img
+                src="./images/Daniel-Wilson.jpg"
+                alt="Daniel Wilson"
+                width="264" />
+              <div class="profile">
+                <h3 class="item-title">Daniel Wilson</h3>
+                <p class="item-description">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <!-- /div Section 3-->
       </section>
 
-      <!-- PORTFOLIO -->
+      <!-- PORTFOLIO Section 4 -->
       <section class="section-portfolio">
         <h2 class="section-title">Our Portfolio</h2>
         <ul>
