add section 4 css

--- a/index.html
+++ b/index.html
@@ -154,63 +154,78 @@
 
       <!-- PORTFOLIO Section 4 -->
       <section class="section-portfolio">
+        <div class="container">
         <h2 class="section-title">Our Portfolio</h2>
-        <ul>
-          <li>
+        <ul class="portfolio-ul">
+          <li class="portfolio-li">
             <img
               src="./images/portfolio/portfolio1.jpg"
               alt="portfolio1"
               width="360"
               height="300" />
+              <div class="portfolio-app">
             <h3 class="item-title">Banking App</h3>
             <p class="item-description">App</p>
+            </div>
           </li>
-          <li>
+          <li class="portfolio-li">
             <img
               src="./images/portfolio/portfolio2.jpg"
               alt="portfolio2"
               width="360"
               height="300" />
+              <div class="portfolio-app">
             <h3 class="item-title">Cashless Payment</h3>
             <p class="item-description">Marketing</p>
+            </div>
           </li>
-          <li>
+          <li class="portfolio-li">
             <img
               src="./images/portfolio/portfolio3.jpg"
               alt="portfolio3"
               width="360"
               height="300" />
+              <div class="portfolio-app">
             <h3 class="item-title">Meditation App</h3>
             <p class="item-description">App</p>
+            </div>
           </li>
-          <li>
+          <li class="portfolio-li">
             <img
               src="./images/portfolio/portfolio4.jpg"
               alt="portfolio4"
               width="360"
               height="300" />
+              <div class="portfolio-app">
             <h3 class="item-title">Taxi Service</h3>
             <p class="item-description">Marketing</p>
+            </div>
           </li>
-          <li>
+          <li class="portfolio-li">
             <img
               src="./images/portfolio/portfolio5.jpg"
               alt="portfolio5"
               width="360"
               height="300" />
+              <div class="portfolio-app">
             <h3 class="item-title">Screen Illustrations</h3>
             <p class="item-description">Design</p>
+            </div>
           </li>
-          <li>
+          <li class="portfolio-li">
             <img
               src="./images/portfolio/portfolio6.jpg"
               alt="portfolio6"
               width="360"
               height="300" />
+              <div class="portfolio-app">
             <h3 class="item-title">Online Courses</h3>
             <p class="item-description">Marketing</p>
+            </div>
           </li>
         </ul>
+        </div>
+        <!-- /div Section 4 -->
       </section>
     </main>
 
